fix(FEC-8134): replay fails on iOS for playback with ads (#224)
since z-index exists on the ads container, click on the pre-playback isn't triggered. We can safely remove the z-indexes since the layers are now organised correctly.

--- a/src/styles/_shell.scss
+++ b/src/styles/_shell.scss
@@ -75,7 +75,6 @@
 }
 
 .player :global([id^=playkit-ads-container]) {
-  z-index: 5;
   transition: transform 100ms;
 }
 
